--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@react-three/drei": "^9.70.1",
+        "@react-three/fiber": "^8.13.0",
+        "leva": "^0.9.34",
+        "r3f-perf": "^7.1.2",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "three": "^0.153.0"
     },
     "devDependencies": {
         "@types/node": "^20.2.4",
@@ -26,6 +31,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.3.4",
         "postcss": "^8.4.24",
+        "rollup-plugin-glslify": "^1.3.1",
         "tailwindcss": "^3.3.2",
         "typescript": "^5.0.2",
         "vite": "^4.3.0"
