--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/node": "^20.2.4",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
+        "@types/three": "^0.152.1",
         "@typescript-eslint/eslint-plugin": "^5.57.1",
         "@typescript-eslint/parser": "^5.57.1",
         "@vitejs/plugin-basic-ssl": "^1.0.1",
